fix: 配置文件和文档更新